Se agrego twitter y se cambio los estilos del boton

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ http://www.templatemo.com/tm-406-flex
                             </div> <!-- /.service-icon -->
                             <div class="service-content">
                                 <div class="inner-service">
-                                   <h3>Lic. Pedagogía</h3>
+                                   <h3>Lic. Pedagogíaa</h3>
                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim, assumenda, eveniet, consectetur, ex doloribus veniam asperiores incidunt mollitia placeat aniet.</p> 
                                 </div>
                             </div> <!-- /.service-content -->
